--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 
 </style>
 <input type="text" id="txt_calendar" style="margin-left: 20px;margin-top: 20px;background-color: #cfcfcf;border: none;border-radius: 5px;height: 25px;padding-left: 10px;outline:none;" readonly="readonly" onfocus="showDate()"/>
-<script type="text/javascript" src="js/dateJs.fei.js" ></script>
+<script type="text/javascript"></script>
 </body>
 </html>
